--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,8 +59,10 @@
      <Compile Include="Assets\scripts\BaseStat.cs" />
      <Compile Include="Assets\scripts\CharacterPanel.cs" />
      <Compile Include="Assets\scripts\CharacterStats.cs" />
+     <Compile Include="Assets\scripts\CombatEvents.cs" />
      <Compile Include="Assets\scripts\ConsumableController.cs" />
      <Compile Include="Assets\scripts\DialogSystem.cs" />
+     <Compile Include="Assets\scripts\DropTable.cs" />
      <Compile Include="Assets\scripts\FireBall.cs" />
      <Compile Include="Assets\scripts\IConsumable.cs" />
      <Compile Include="Assets\scripts\IEnemy.cs" />
@@ -77,6 +79,7 @@
      <Compile Include="Assets\scripts\NPC.cs" />
      <Compile Include="Assets\scripts\PickupItem.cs" />
      <Compile Include="Assets\scripts\Player.cs" />
+     <Compile Include="Assets\scripts\PlayerLevel.cs" />
      <Compile Include="Assets\scripts\PlayerWeaponController.cs" />
      <Compile Include="Assets\scripts\PotionLog.cs" />
      <Compile Include="Assets\scripts\Slime.cs" />
