--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
      <Compile Include="Assets\scripts\DialogSystem.cs" />
      <Compile Include="Assets\scripts\DropTable.cs" />
      <Compile Include="Assets\scripts\FireBall.cs" />
+     <Compile Include="Assets\scripts\HealthbarUI.cs" />
      <Compile Include="Assets\scripts\IConsumable.cs" />
      <Compile Include="Assets\scripts\IEnemy.cs" />
      <Compile Include="Assets\scripts\Interactable.cs" />
