--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Campfire Pack\Script\SwitchView.cs" />
+     <Compile Include="Assets\Inventory.cs" />
+     <Compile Include="Assets\InventorySlot.cs" />
      <Compile Include="Assets\Low Polygon Potions Pack\Other Assets\Scripts\CreatePrefabFromSelected.cs" />
      <Compile Include="Assets\PolyQuest_EvilVillage\Scripts\FlyCam.cs" />
      <Compile Include="Assets\scripts\ActionItem.cs" />
@@ -74,7 +76,11 @@
      <Compile Include="Assets\scripts\Inventory\InventoryUIDetails.cs" />
      <Compile Include="Assets\scripts\Inventory\InventoryUIItem.cs" />
      <Compile Include="Assets\scripts\Inventory\Item.cs" />
+     <Compile Include="Assets\scripts\Inventory\ItemData.cs" />
      <Compile Include="Assets\scripts\Inventory\ItemDatabase.cs" />
+     <Compile Include="Assets\scripts\Inventory\MyInventory.cs" />
+     <Compile Include="Assets\scripts\Inventory\Slot.cs" />
+     <Compile Include="Assets\scripts\Inventory\Tooltip.cs" />
      <Compile Include="Assets\scripts\Inventory\UIEventHandler.cs" />
      <Compile Include="Assets\scripts\IProjectileWeapon.cs" />
      <Compile Include="Assets\scripts\IWeapon.cs" />
@@ -112,6 +118,7 @@
      <None Include="Assets\Resources\ShopDB\shoplist_2.txt" />
      <None Include="Assets\Low Polygon Potions Pack\Readme.txt" />
      <None Include="Assets\Resources\ShopDB\shoplist_1.txt" />
+     <None Include="Assets\rpg-tutorial-assets\README.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
