--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -96,7 +96,9 @@
      <Compile Include="Assets\scripts\Questing\JournalUI.cs" />
      <Compile Include="Assets\scripts\Questing\JournalUIDetails.cs" />
      <Compile Include="Assets\scripts\Questing\KillGoal.cs" />
+     <Compile Include="Assets\scripts\Questing\NavigationUI.cs" />
      <Compile Include="Assets\scripts\Questing\Quest.cs" />
+     <Compile Include="Assets\scripts\Questing\QuestArrow.cs" />
      <Compile Include="Assets\scripts\Questing\QuestDetailsUI.cs" />
      <Compile Include="Assets\scripts\Questing\QuestEventHandler.cs" />
      <Compile Include="Assets\scripts\Questing\QuestGiver.cs" />
