--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -84,6 +84,8 @@
      <Compile Include="Assets\scripts\Inventory\UIEventHandler.cs" />
      <Compile Include="Assets\scripts\IProjectileWeapon.cs" />
      <Compile Include="Assets\scripts\IWeapon.cs" />
+     <Compile Include="Assets\scripts\MusicHandler.cs" />
+     <Compile Include="Assets\scripts\MusicPlayer.cs" />
      <Compile Include="Assets\scripts\NPC.cs" />
      <Compile Include="Assets\scripts\PickupItem.cs" />
      <Compile Include="Assets\scripts\Player.cs" />
